--- a/Map_Geofencing/Supporting Files/Info.plist
+++ b/Map_Geofencing/Supporting Files/Info.plist
@@ -56,7 +56,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>App needs to get user's location</string>
+	<string>App needs to get user&apos;s location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
